--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Biker Zone</title>
   <!--Tailwind and DaisyUI cdn-->
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com">
+
+  </script>
+  <!--Google fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!--tailwind custom color-->
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            clifford: '#da373d',
+            'bg-bike-primary': 'rgba(231, 111, 81, 0.10)',
+            'bg-footer': '#0B0D17'
+          }
+        }
+      }
+    }
+  </script>
+  <style>
+    .font-poppins{
+      font-family: "Poppins", sans-serif;}
+  </style>
 </head>
-<body>
+
+
+
+<body class="font-poppins">
   <header>
     <nav>
       <div class="navbar bg-base-100">
@@ -24,7 +54,7 @@
               <li><a>About Us</a></li>
             </ul>
           </div>
-          <a class="btn btn-ghost text-xl">Biker Zone</a>
+          <a class="btn btn-ghost text-4xl">Biker Zone</a>
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
@@ -39,12 +69,147 @@
         </div>
       </div>
     </nav>
+    <!--Silder or carousel-->
+    <div class="carousel w-full bg-bg-bike-primary">
+      <!--Slide 1-->
+      <div id="slide1" class="carousel-item relative w-full">
+        <img src="images/slider/bike1.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide4" class="btn btn-circle">❮</a> 
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <!--Slide 2-->
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="images/slider/bike2.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide1" class="btn btn-circle">❮</a> 
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <!--Slide 3-->
+      <div id="slide3" class="carousel-item relative w-full">
+        <img src="images/slider/bike3.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide2" class="btn btn-circle">❮</a> 
+          <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+      </div> 
+      <!--Slide 4-->
+      <div id="slide4" class="carousel-item relative w-full">
+        <img src="images/slider/bike4.png" class="w-full" />
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+          <a href="#slide3" class="btn btn-circle">❮</a> 
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+    </div>
   </header>
   <main>
-
+    <!--Happy client section-->
+    <section class="my-32">
+      <h3 class="text-5xl mb-12 font-semibold text-center">Happy Clients says</h3>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-11">
+        <!--First card-->
+        <div class="card card-compact p-9 bg-base-100 border border-gray-400">
+          <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Shoes!</h2>
+            <p>Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked  />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+            <div class="text-center space-y-4 mt-4">
+              <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+              <p>Banker</p>
+            </div>
+          </div>
+        </div>
+                <!--second card-->
+                <div class="card card-compact p-9 bg-base-100 border border-gray-400">
+                  <figure><img class="w-36" src="images/others/user-2.png" alt="Shoes" /></figure>
+                  <div class="card-body">
+                    <h2 class="card-title">Shoes!</h2>
+                    <p>Slate helps you see how 
+                      many more days you need 
+                      to work to reach your financial 
+                      goal for the month and year.</p>
+                      <div class="rating justify-center">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked  />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      </div>
+                    <div class="text-center space-y-4 mt-4">
+                      <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                      <p>Banker</p>
+                    </div>
+                  </div>
+                </div>
+                        <!--third card-->
+        <div class="card card-compact p-9 bg-base-100 border border-gray-400">
+          <figure><img class="w-36" src="images/others/user-3.png" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Shoes!</h2>
+            <p>Slate helps you see how 
+              many more days you need 
+              to work to reach your financial 
+              goal for the month and year.</p>
+              <div class="rating justify-center">
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked  />
+                <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+              </div>
+            <div class="text-center space-y-4 mt-4">
+              <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+              <p>Banker</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer>
 
+
+
+
+  <!--Footer section-->
+
+
+  <footer class="footer p-10 bg-neutral text-neutral-content bg-bg-footer lg:gap-[475px]">
+    <aside>
+      <div class="row1 flex gap-6">
+        <a href="">Download Now</a>
+      <a href="">Lisence</a>
+      </div>
+      <div class="row1 flex gap-6">
+        <a href="">About</a>
+      <a href="">Features</a>
+      <a href="">Princing</a>
+      <a href="">Career</a>
+      <a href="">Help</a>
+      <a href="">PrivacyPolicy</a>
+      </div>
+
+      <p>Copyright&copy;2024.All right Reserved</p>
+    </aside> 
+    <nav class="grid grid-cols-1 gap-4">
+      <header class="footer-title">Get the App</header> 
+      <div class="grid grid-cols-1 gap-[16px]">
+        <img class="w-36" src="images/others/android.png" alt="">
+        <img class="w-36" src="images/others/ios.png" alt="">
+      </div>
+    </nav>
   </footer>
 </body>
 </html>
